package com.tk.presentation.model

class WeatherModel(val weather: String, val tempMin: Int, val tempMax: Int, val iconUrl: String)